[package]
name = "kvs"
version = "0.1.0"
authors = ["Thom Wright <dev@thomwright.co.uk>"]
edition = "2018"
description = "A key-value store"

[dependencies]
clap = "~2.33.0"
failure = "~0.1.5"
serde = {version = "~1.0.99", features = ["derive"]}
serde_json = "1.0.40"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
