[package]
name = "kvs"
version = "0.1.0"
authors = ["Thom Wright <dev@thomwright.co.uk>"]
edition = "2018"
description = "A key-value store"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"
bench = false

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"
bench = false

[lib]
bench = false

[dependencies]
clap = "~2.33.0"
failure = "~0.1.5"
serde = {version = "~1.0.99", features = ["derive"]}
serde_json = "~1.0.40"
sled = "~0.29.2"
slog = "~2.5.2"
slog-term = "~2.4.1"

[dev-dependencies]
assert_cmd = "~0.11"
criterion = "~0.3.0"
crossbeam-utils = "~0.6.5"
predicates = "~1.0.0"
rand = "~0.7.2"
tempfile = "~3.0.7"
walkdir = "~2.2.7"
panic-control = "~0.1.4"

[[bench]]
name = "benches"
harness = false
